[tool.poetry]
name = "qcware_transpile"
version = "0.1.1-alpha.16"
description = "A quantum circuit transpilation framework"
authors = ["Vic Putz <vic.putz@qcware.com>"]
include = ["qcware_transpile/py.typed"]
packages = [
  {include = "qcware_transpile"},
  {include = "tests", format="sdist"}
]

[tool.poetry.dependencies]
python = "^3.8"
pyrsistent = "^0.17.3"
attrs = "^21.2.0"
qcware-quasar = { version = "^1.0.2", optional=true }
qiskit-aer = { version = "^0.9.0", optional=true }
pyzx = {version = "^0.6.3", optional = true}
toolz = "^0.11.1"
icontract = "^2.4.1"
amazon-braket-sdk = {version = "^1.9.0", optional = true}
qsharp = {version = "^0.15.2102", optional = true}
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
hypothesis = "^6.9.1"
pytest = "^6.1.2"
python-lsp-server = {extras= ["rope"], version="1.2.1"}
mypy = "^0.910"
watchdog = {extras = ["watchmedo"], version = "^1.0.1"}
invoke = "^1.4.1"
pylsp-mypy = "^0.5.2"
pyls-isort = "^0.2.2"
sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
snakeviz = "^2.1.0"
pipdeptree = "^2.0.0"
python-lsp-black = "^1.0.0"
# pydantic pinned at 1.7.3 to avoid hypothesis tooling errors; not used directly
pydantic = "1.7.3"
pytest-xdist = "^2.2.1"
pre-commit = "^2.14.0"
pyls-memestra = "^0.0.15"

[tool.poetry.extras]
qcware-quasar = ["qcware-quasar"]
qiskit = ["qiskit-aer"]
pyzx = ["pyzx"]
braket = ["amazon-braket-sdk"]
qsharp = ["qsharp"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
'toolz.*',
'quasar.*',
'qiskit.*',
'pyzx',
'numpy.*',
'braket.*',
'qsharp.*',
'parse.*'
]
ignore_missing_imports = true

#[tool.pyls]
#"plugins.pyls_mypy.enabled": True
#"plugins.pyls_mypy.live_mode": False
