[tool.poetry]
name = "qcware_transpile"
version = "0.1.1-alpha.3"
description = "A quantum circuit transpilation framework"
authors = ["Vic Putz <vic.putz@qcware.com>"]
include = ["qcware_transpile/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
pyrsistent = "^0.17.3"
attrs = "^20.3.0"
qcware-quasar = { version = "^1.0.2", optional=true }
qiskit-aer = { version = "^0.7.2", optional=true }
pyzx = {version = "^0.6.3", optional = true}
toolz = "^0.11.1"
icontract = "^2.4.1"

[tool.poetry.dev-dependencies]
hypothesis = "^6.1.1"
pytest = "^6.1.2"
mypy = "^0.790"
watchdog = {extras = ["watchmedo"], version = "^1.0.1"}
invoke = "^1.4.1"
pytest-parallel = "^0.1.0"
sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
python-lsp-server = {extras = ["rope", "pyflakes", "pycodestyle"], version = "^1.3.2"}
python-lsp-black = "^1.0.1"
pyls-isort = "^0.2.2"
pylsp-mypy = "^0.5.4"
pre-commit = "^2.16.0"
black = "^21.12b0"

[tool.poetry.extras]
qcware-quasar = ["qcware-quasar"]
qiskit = ["qiskit-aer"]
pyzx = ["pyzx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
